--- a/admin.html
+++ b/admin.html
@@ -7,10 +7,10 @@
    
   <title>Covid-19</title>
 
-  <meta charset="UTF-8">
+  
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Covid-19</title>
+  <title>Admin Page</title>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -52,7 +52,8 @@
           margin: 4px 2px;
           cursor: pointer;
       }
-      ::placeholder{color: white;}
+      ::placeholder{color: white;
+        text-align: center;}
       
 
         .form-content{
@@ -68,7 +69,7 @@
 	
 </head>
 <body>
-    <div align="center" class="container mx-auto" style="width:39%;">
+    <div align="center" style="width:49%;" class="container  mx-auto">
         <form action="adminlogin1.php" method="POST" class="form-content">
 	
 
