--- a/insert_doctor_category.html
+++ b/insert_doctor_category.html
@@ -1,24 +1,22 @@
-<!DOCTYPE html>
 
+
+
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Insert records</title> 
-	<style type="text/css">
-		.type{
-			margin-left: 15vmin;
-		}
-	</style>
+<link rel="stylesheet" href="style1.css">
 </head>
 <body>
-	<h1> <center> Insert records for Doctor Category</center></h1>
-	<a href="menu.html">Back</a><br><br>
+	<h1><center>Insert Records to Doctor Category</center></h1>
+	<center>
+	<br>
+	<a href="menu.html">Back to Menu</a>
 	<form action="insert_doctor_category.php" method="post" name="insert_doctor_category_form">
-		Category ID: <input type="text" name="cat_id" placeholder="ID"><br><br>
-		Category Name:<input type="text" name="cat_name" placeholder="Name"><br><br>
+		<label>Category ID : </label><input type="text" name="cat_id" placeholder="ID"><br><br>
+		<label>Category Name : </label><input type="text" name="cat_name" placeholder="Name"><br><br>
 		<input type="submit" value="Submit">
 	</form>
-		
-	</form>
-
+	</center>
 </body>
 </html>
+
