--- a/frontend/HospitalAndSafehome/src/Hospital.html
+++ b/frontend/HospitalAndSafehome/src/Hospital.html
@@ -71,13 +71,13 @@
             <a class="nav-link " aria-current="page" href="../../BloodBank/blood_bank.html">Blood Bank</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="../../oxygen.html">Oxygen Services</a>
+            <a class="nav-link " aria-current="page" href="../../oxygen.php">Oxygen Services</a>
           </li>
           <li class="nav-item">
             <a class="nav-link " aria-current="page" href="../../vaccination.html">Covid Vaccination</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="../../meal and childcare.html">Healthcare volunteers Meal and
+            <a class="nav-link " aria-current="page" href="../../meal and childcare.php">Healthcare volunteers Meal and
               Child care Services</a>
           </li>
           <li class="nav-item">
