--- a/menu.html
+++ b/menu.html
@@ -34,7 +34,8 @@
 </div>
 <div class="responsive">
 	<div class="gallery">
-		<img src="https://thumbs.dreamstime.com/b/woman-see-doctor-check-herself-doctor-consulting-female-patient-woman-see-doctor-check-herself-doctor-consulting-female-180935985.jpg " alt="doc_consult" width="200" height="120"><br>
+		<img src="   https://thumbs.dreamstime.com/b/woman-see-doctor-check-herself-doctor-consulting-female-patient-woman-see-doctor-check-herself-doctor-consulting-female-180935985.jpg" alt="doc_consult" width="200" height="120"><br>
+
 		<div class="desc"><b><u>DOCTOR CONSULTATION</u></b><br>
 			<a href="Insert_doctors_data.php">Insert Data</a><br>
 			<a href="display_doctor_data.php">Display , update and delete the records</a>
@@ -44,7 +45,7 @@
 
 <div class="responsive">
 	<div class="gallery">
-		<img src="https://thumbs.dreamstime.com/b/woman-see-doctor-check-herself-doctor-consulting-female-patient-woman-see-doctor-check-herself-doctor-consulting-female-180935985.jpg " alt="doc_consult" width="200" height="120"><br>
+		<img src="https://userscontent2.emaze.com/images/7e9e122c-f702-49a4-b457-b38747774768/4033f8fd3cc10c0e209f128feb002aea.png" width="200" height="120"><br>
 		<div class="desc"><b><u>SERVICE</u></b><br>
 			<a href="insert_service_data.html">Insert Data</a><br>
 			<a href="display_service.php">Display , update and delete the records</a>
