--- a/frontend/vaccination.html
+++ b/frontend/vaccination.html
@@ -67,13 +67,13 @@
             <a class="nav-link " aria-current="page" href="./BloodBank/blood_bank.html">Blood Bank</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="oxygen.html">Oxygen Supplier</a>
+            <a class="nav-link " aria-current="page" href="oxygen.php">Oxygen Services</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="vaccination.html">Covid Vaccination</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="meal and childcare.html">Healthcare volunteers Meal and Child
+            <a class="nav-link " aria-current="page" href="meal and childcare.php">Healthcare volunteers Meal and Child
               care
               Services</a>
           </li>
