--- a/insert_hospital_data.html
+++ b/insert_hospital_data.html
@@ -17,10 +17,10 @@
 				<div class='content'>
 					<div class='input-fields'>
 						<br>
-						Hospital ID : <input type="text" name="id" placeholder="ID"><br><br>
+						Hospital ID : <input type="text" name="hid" placeholder="ID"><br><br>
 						Hospital name : <input type="text" name="name" placeholder="Name"><br><br>
 						<label>Hospital type : </label>
-							<input type="radio" name="type" class="type" value="Government Hospital">Government Hospital<br>
+							<input type="radio" name="type" class="type" value="Government Hospital" style="margin-left: 1vmin;">Government Hospital<br>
 							<input type="radio" name="type" class="type" value="Govt. Requisitioned Pvt. Hospital">Govt. Requisitioned Pvt. Hospital<br>
 							<input type="radio" name="type" class="type" value="Private Hospital">Private Hospital
 						<br><br>
