--- a/frontend/BloodBank/read2.html
+++ b/frontend/BloodBank/read2.html
@@ -43,10 +43,11 @@
             <a class="nav-link" aria-current="page" href="../household.html">Household Precautions</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Doctor Consultancy</a>
+            <a class="nav-link" aria-current="page" href="../Doctor/consult.php">Doctor Consultancy</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="../HospitalAndSafehome/src/hospital.php">Hospital</a>
+            <a class="nav-link" aria-current="page" href="../HospitalAndSafehome/src/hospital.php">Hospital and Safe
+              Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="./blood_bank.php">Blood Bank</a>
@@ -78,23 +79,12 @@
   <div type="button" class="btn btn-floating rounded" id="btn-back-to-top">
     <img src="../images/scroller.png" class="scroller w-100 " />
   </div>
-  <div class="container-fluid mt-5 ml-5 text-center pt-2">
+  <div class="container text-center pt-2">
     <div class="row content">
-      <div class="col-12 col-md-2 ml-4">
-        <div class="list-group w-100">
-          <a href="blood_bank.php #how" class="list-group-item list-group-item-action">How to donate blood ?</a>
-          <a href="blood_bank.php #become" class="list-group-item list-group-item-action">Become Donor / Request
-            Blood</a>
-          <a href="blood_bank.php #bank" class="list-group-item list-group-item-action">Blood Banks</a>
-          <a href="blood_bank.php #cell" class="list-group-item list-group-item-action">Blood Cell Disorders</a>
-          <a href="blood_bank.php #about" class="list-group-item list-group-item-action">About Blood Groups</a>
-          <a href="read1.html #why" class="list-group-item list-group-item-action">Why donate blood ?</a>
-          <a href="#tips" class="list-group-item list-group-item-action active">Tips on blood donation</a>
-          <a href="blood_bank.php #faq" class="list-group-item list-group-item-action">FAQs</a>
-        </div>
-      </div>
-      <div class="col-sm-8 text-left">
-        <center>
+      <div class="col-12 text-left">
+        <a href="./blood_bank.php" style="width: 20%;" class="mb-2 pb-2"><i class="fas fa-arrow-circle-left fa-3x "
+            style="color: blueviolet;"></i></a>
+        <div class="text-center">
           <h3 style="
                 font-weight: bold;
                 font-family: verdana;
@@ -103,7 +93,7 @@
               " id="tips">
             Tips on blood donation
           </h3>
-        </center>
+        </div>
         <p style="font-size: 15px">
           Blood is one of the most important things that helps a person live.
           About 4 to 6 litres of blood is present in an average human body
@@ -143,7 +133,7 @@
           </li>
         </ul>
         <center>
-          <img src="im4.jpg" alt="benefits" width="800" height="400" />
+          <img src="im4.jpg" alt="benefits" class="w-100" />
         </center>
         <br />
         <h5 style="font-weight: bold">
