--- a/frontend/BloodBank/read1.html
+++ b/frontend/BloodBank/read1.html
@@ -47,10 +47,11 @@
             <a class="nav-link" aria-current="page" href="../household.html">Household Precautions</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="#">Doctor Consultancy</a>
+            <a class="nav-link " aria-current="page" href="../Doctor/consult.php">Doctor Consultancy</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="../HospitalAndSafehome/src/hospital.php">Hospital</a>
+            <a class="nav-link " aria-current="page" href="../HospitalAndSafehome/src/hospital.php">Hospital and Safe
+              Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="./blood_bank.php">Blood Bank</a>
@@ -83,23 +84,11 @@
   <div type="button" class="btn btn-floating rounded" id="btn-back-to-top">
     <img src="../images/scroller.png" class="scroller w-100 " />
   </div>
-  <div class="container-fluid mt-5 ml-5 text-center pt-2">
+  <div class="container text-center pt-2">
     <div class="row content">
-      <div class="col-12 col-md-2 ml-4">
-
-        <div class="list-group w-100">
-          <a href="blood_bank.php #how" class="list-group-item list-group-item-action">How to donate blood ?</a>
-          <a href="blood_bank.php #become" class="list-group-item list-group-item-action">Become Donor / Request
-            Blood</a>
-          <a href="blood_bank.php #bank" class="list-group-item list-group-item-action">Blood Banks</a>
-          <a href="blood_bank.php #cell" class="list-group-item list-group-item-action">Blood Cell Disorders</a>
-          <a href="blood_bank.php #about" class="list-group-item list-group-item-action">About Blood Groups</a>
-          <a href="#why" class="list-group-item list-group-item-action active">Why donate blood ?</a>
-          <a href="read2.html #tips" class="list-group-item list-group-item-action">Tips on blood donation</a>
-          <a href="blood_bank.php #faq" class="list-group-item list-group-item-action">FAQs</a>
-        </div>
-      </div>
-      <div class="col-sm-8 text-left ">
+      <div class="col-12 text-left ">
+        <a href="./blood_bank.php" style="width: 20%;" class="mb-2 pb-2"><i class="fas fa-arrow-circle-left fa-3x "
+            style="color: blueviolet;"></i></a>
         <div class="text-center">
           <h3 style="font-weight:bold;font-family:verdana;color:#ffcc00;text-shadow:2px 2px 3px green;" id="why">Why
             donate blood ?</h3>
@@ -110,7 +99,8 @@
           required on a daily basis, whereas
           victims of accident may require upto 100 units of blood transfusion. In India, blood shortage is more than 2
           million pint and counting.</p>
-        <center><img src="b.jpg" alt="benefits" width="400" height="300"></center><br>
+        <center style="width: 100%; display: flex; justify-content: center; align-items: center;"><img src="b.jpg"
+            alt="benefits" width="50%"></center><br>
         <p style="font-size:15px;">Everyday, there are many emergency cases or other treatments that require blood. But
           unfortunately, the requirement of blood is exponentially more
           than its supply. This, at times, leads to loss of life. An act of kindness and a selfless service of donating
@@ -119,7 +109,7 @@
         <div class="how-section1">
           <div class="row">
             <div class="col-md-6 how-img">
-              <img src="b1.jpg" alt="benefits">
+              <img src="b1.jpg" class="w-100" alt="benefits">
             </div>
             <div class="col-md-6">
               <h4 class="subheading">1. Reduce risk of heart attacks and liver ailment</h4>
@@ -131,7 +121,7 @@
           </div>
           <div class="row">
             <div class="col-md-6 how-img">
-              <img src="b2.jpg" alt="benefits">
+              <img src="b2.jpg" class="w-100" alt="benefits">
             </div>
             <div class="col-md-6">
               <h4 class="subheading">2. Lower the risk of cancer</h4>
@@ -143,7 +133,7 @@
           </div>
           <div class="row">
             <div class="col-md-6 how-img">
-              <img src="b3.jpg" alt="benefits">
+              <img src="b3.jpg" class="w-100" alt="benefits">
             </div>
             <div class="col-md-6">
               <h4 class="subheading">3. New blood cells</h4>
@@ -154,7 +144,7 @@
           </div>
           <div class="row">
             <div class="col-md-6 how-img">
-              <img src="b4.jpg" alt="benefits">
+              <img src="b4.jpg" class="w-100" alt="benefits">
             </div>
             <div class="col-md-6">
               <h4 class="subheading">4. Reduced risk of hemochromatosis</h4>
@@ -165,7 +155,7 @@
           </div>
           <div class="row">
             <div class="col-md-6 how-img">
-              <img src="b5.jpg" alt="benefits">
+              <img src="b5.jpg" class="w-100" alt="benefits">
             </div>
             <div class="col-md-6">
               <h4 class="subheading">5. Maintain Weight</h4>
@@ -176,7 +166,7 @@
           </div>
           <div class="row">
             <div class="col-md-6 how-img">
-              <img src="b6.jpg" alt="benefits">
+              <img src="b6.jpg" class="w-100" alt="benefits">
             </div>
             <div class="col-md-6">
               <h4 class="subheading">6. Helps prevent premature ageing</h4>
@@ -188,7 +178,7 @@
           </div>
           <div class="row">
             <div class="col-md-6 how-img">
-              <img src="b7.jpg" alt="benefits">
+              <img src="b7.jpg" class="w-100" alt="benefits">
             </div>
             <div class="col-md-6">
               <h4 class="subheading">7. Speeds up healing process</h4>
@@ -199,7 +189,7 @@
           </div>
           <div class="row">
             <div class="col-md-6 how-img">
-              <img src="b8.jpg" alt="benefits">
+              <img src="b8.jpg" class="w-100" alt="benefits">
             </div>
             <div class="col-md-6">
               <h4 class="subheading">8. Lower cholesterol level</h4>
@@ -210,7 +200,7 @@
           </div>
           <div class="row">
             <div class="col-md-6 how-img">
-              <img src="b9.jpg" alt="benefits">
+              <img src="b9.jpg" class="w-100" alt="benefits">
             </div>
             <div class="col-md-6">
               <h4 class="subheading">9. Free Medical checkup</h4>
@@ -223,7 +213,7 @@
           </div>
           <div class="row">
             <div class="col-md-6 how-img">
-              <img src="b10.jpg" alt="benefits">
+              <img src="b10.jpg" class="w-100" alt="benefits">
             </div>
             <div class="col-md-6">
               <h4 class="subheading">10. Live a longer life</h4>
@@ -234,7 +224,7 @@
           </div>
           <div class="row">
             <div class="col-md-6 how-img">
-              <img src="b11.jpg" alt="benefits">
+              <img src="b11.jpg" class="w-100" alt="benefits">
             </div>
             <div class="col-md-6">
               <h4 class="subheading">11. Psychological Upliftment</h4>
@@ -244,7 +234,7 @@
           </div>
           <div class="row">
             <div class="col-md-6 how-img">
-              <img src="b12.jpg" alt="benefits">
+              <img src="b12.jpg" class="w-100" alt="benefits">
             </div>
             <div class="col-md-6">
               <h4 class="subheading">12. Blood storage</h4>
@@ -257,7 +247,7 @@
           </div>
           <div class="row">
             <div class="col-md-6 how-img">
-              <img src="b13.jpg" alt="benefits">
+              <img src="b13.jpg" class="w-100" alt="benefits">
             </div>
             <div class="col-md-6">
               <h4 class="subheading">13. Save lives</h4>
