--- a/frontend/household.html
+++ b/frontend/household.html
@@ -48,10 +48,11 @@
             <a class="nav-link active" aria-current="page" href="household.html">Household Precautions</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="#">Doctor Consultancy</a>
+            <a class="nav-link " aria-current="page" href="./Doctor/consult.php">Doctor Consultancy</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="./HospitalAndSafehome/src/hospital.php">Hospital</a>
+            <a class="nav-link " aria-current="page" href="./HospitalAndSafehome/src/hospital.php">Hospital and Safe
+              Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link " aria-current="page" href="./BloodBank/blood_bank.php">Blood Bank</a>
