--- a/register.html
+++ b/register.html
@@ -59,7 +59,7 @@
 <form action="register.php" method="POST">
 
     <label for="name"></label><br>
-  <input type="text" id="name" name="name" placeholder="Full-NAME" style="background-color: darkslategray;
+  <input type="text" id="name" name="name" placeholder="Full-NAME" required style="background-color: darkslategray;
   color: white; font-size: 20px; font: bold;"><br><br>
 
 
@@ -67,12 +67,12 @@
 
  
   <label for="email"></label><br>
-  <input type="email" id="email" name="email" placeholder="E-mail" style="background-color: darkslategray;
+  <input type="email" id="email" name="email" placeholder="E-mail" required style="background-color: darkslategray;
   color: white; font-size: 20px; font: bold;" ><br><br>
 
 
  <label for="email"></label><br>
-  <input type="password" id="pass" name="pass" placeholder="password" style="background-color: darkslategray;
+  <input type="password" id="pass" name="pass" placeholder="password" required style="background-color: darkslategray;
   color: white; font-size: 20px; font: bold;" ><br><br>
   
   
