doctor table added

--- a/menu.html
+++ b/menu.html
@@ -47,7 +47,7 @@
 		<div class="desc"><b><u>HOSPITAL DATABASE</u></b><br>
 			<a href="insert_hospital_data.html">Insert Data</a><br>
 			
-			<li><a href="display_hospital.php">Display , update and delete the records</a>
+			<a href="display_hospital.php">Display , update and delete the records</a>
 		</div>
 	</div>
 </div>
