--- a/frontend/Doctor/covid.html
+++ b/frontend/Doctor/covid.html
@@ -1,5 +1,3 @@
-<?php  // Display doctor's data 
-include("connection.php");?>
 <!DOCTYPE html>
 <html>
 
@@ -65,10 +63,10 @@ include("connection.php");?>
       <div class="col-12 col-md-6 s6">
         <div id="grad1">
           <center>
-            <form style="margin-top:55px;" action="#table" method="POST">
+            <form style="margin-top:55px;">
               <div style="padding-top:120px;">
                 <label>Select district:</label>
-                <select name="district_choice">
+                <select>
                   <option>Select</option>
                   <option>ALIPURDUAR</option>
                   <option>BANKURA</option>
@@ -94,7 +92,7 @@ include("connection.php");?>
                   <option>UTTAR 24 PARGANA</option>
                   <option>UTTAR DINAJPUR</option>
                 </select><br>
-                <input type="submit" name="submit" class="btn" value="Submit">
+                <input type="submit" name="submit" class="btn">
               </div>
             </form>
           </center>
@@ -111,58 +109,6 @@ include("connection.php");?>
     </div>
   </div>
   <br><br>
-  <div class="container  mt-5">
-        <div class="row mt-3 mytable">
-              <table class="table" id="table">
-                  <?php
-                    if(isset($_REQUEST['submit']) && ($_REQUEST['submit']=='Submit'))
-                    {
-                      $dis = $_REQUEST['district_choice'];
-                      $sql = "SELECT * FROM `doctor_db` WHERE `cat_id`= 1 and `district`='$dis'";
-                      $result = mysqli_query($link,$sql);?>
-                      <thead class="thead-light">
-                      <tr style="text-align:center;">
-                        <th scope="col">Serial No.</th>
-                        <th scope="col">Doctor's Name</th>
-                        <th scope="col">Contact Number</th>
-                        <th scope="col">Email</th>
-                        <th scope="col">Address</th>
-                        <th scope="col">District</th>
-                        <th scope="col">Additional information</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-              <?php   if(mysqli_num_rows($result) > 0)
-                      {
-                          $count=1;
-                          while($row = mysqli_fetch_assoc($result))
-                          {
-                            echo "<tr>";
-                            echo "<td align = 'center'>".$count."</td>";
-                            echo "<td align = 'center'>".$row["dname"]."</td>";
-                            echo "<td align = 'center'>".$row["phno"]."</td>";
-                            echo "<td align = 'center'>".$row["email"]."</td>";
-                            echo "<td align = 'center'>".$row["address"]."</td>";
-                            echo "<td align = 'center'>".$row["district"]."</td>";
-                            echo "<td align = 'center'>".$row["doctors_additional_info"]."</td>";
-                            echo "</tr>";
-                            $count++;
-                          }
-                      }
-                      else{echo '<tr><td colspan="7" style="color:red; text-align:center;">No record found</td></tr>';}
-                    }
-                  ?>
-                </tbody>
-              </table>
-            </div>
-          </div>
-
-
-
-
-
-
 </body>
 
 </html>
-
