--- a/frontend/userpanel.html
+++ b/frontend/userpanel.html
@@ -156,7 +156,7 @@
                             <input type="file" class="form-control" name="cert" id="formFile">
                         </div>
                         <div class="modal-footer">
-                            <button type="submit" class="btn btn-primary" value="Register" name="submit">Submit</button>
+                           <input type="submit" name="submit" class="btn btn-primary" value="Register">
                         </div>
                     </form>
                 </div>
@@ -242,7 +242,7 @@
                             <input type="file" class="form-control" name="cert" id="formFile">
                         </div>
                         <div class="modal-footer">
-                            <button type="submit" class="btn btn-primary" value="Register" name="submit">Submit</button>
+                           <input type="submit" name="submit" class="btn btn-primary" value="Register">
                         </div>
                     </form>
                 </div>
@@ -313,7 +313,7 @@
                             <input type="file" class="form-control" name="cert" id="formFile">
                         </div>
                         <div class="modal-footer">
-                            <button type="submit" class="btn btn-primary" value="Register" name="submit">Submit</button>
+                            <input type="submit" name="submit" class="btn btn-primary" value="Register">
                         </div>
                     </form>
                 </div>
@@ -332,7 +332,7 @@
                         aria-label="Close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="modal-body">
-                    <form class="row">
+                    <form class="row" action="volunteer_regn.php" method="POST">
                         <div class="col-12 mt-1 ">
                             <label for="Name of volunteer" class="form-label">Name: </label>
                             <input type="text" class="form-control" name="nameOfvolunteer" required>
@@ -389,7 +389,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" type="submit" class="btn btn-primary">Register</button>
+                   <input type="submit" name="submit" class="btn btn-primary" value="Register">
                 </div>
             </div>
         </div>
@@ -405,7 +405,7 @@
                         aria-label="Close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="modal-body">
-                    <form class="row">
+                    <form class="row" action="mealprovider_regn.php" method="POST">
                         <div class="col-12 mt-1 ">
                             <label for="Name of NGO" class="form-label">Name: </label>
                             <input type="text" class="form-control" name="nameOfNGO" required>
@@ -458,7 +458,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" type="submit" class="btn btn-primary">Register</button>
+                    <input type="submit" name="submit" class="btn btn-primary" value="Register">
                 </div>
             </div>
         </div>
@@ -474,7 +474,7 @@
                         aria-label="Close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="modal-body">
-                    <form class="row">
+                    <form class="row" action="childcare_regn.php" method="POST">
                         <div class="col-12 mt-1 ">
                             <label for="Name of NGO" class="form-label">Name</label>
                             <input type="text" class="form-control" name="nameOfNGO" required>
@@ -523,7 +523,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" type="submit" class="btn btn-primary">Register</button>
+                   <input type="submit" name="submit" class="btn btn-primary" value="Register">
                 </div>
             </div>
         </div>
