user panel and alert changes

--- a/frontend/household.html
+++ b/frontend/household.html
@@ -47,7 +47,7 @@
       <a class="navbar-brand" href="index.html"><img class="logo w-100" src="./images/project_logo.png" /></a>
       <ul class="nav navbar-nav d-none d-lg-flex w-100">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="sign.html">Sign in/Sign up</a>
+          <a class="nav-link" aria-current="page" href="sign.php">Sign in/Sign up</a>
         </li>
         <div class="d-flex ml-auto">
           <li class="nav-item ">
@@ -105,7 +105,7 @@
             <a class="nav-link" aria-current="page" href="index.php">Help Desk</a>
           </li>
           <li class="nav-item d-sm-flex d-lg-none">
-            <a class="nav-link" aria-current="page" href="sign.html">Sign in/Sign up</a>
+            <a class="nav-link" aria-current="page" href="sign.php">Sign in/Sign up</a>
           </li>
           <li class="nav-item d-sm-flex d-lg-none">
             <a class="nav-link" aria-current="page" href="index.php">Admin Login</a>
