--- a/frontend/usertable.html
+++ b/frontend/usertable.html
@@ -40,7 +40,7 @@
 <body>
     <div class="container">
         <div class="row pt-2">
-            <a href="./userpanel.html" style="width: 20%;" class="mb-2 pb-2"><i class="fas fa-arrow-circle-left fa-3x "
+            <a href="./userpanel.php" style="width: 20%;" class="mb-2 pb-2"><i class="fas fa-arrow-circle-left fa-3x "
                     style="color: blueviolet;"></i></a>
             <div class="container  mt-5">
                 <div class="row" style="text-align: center; align-items: center; justify-content: center;">
