--- a/frontend/BloodBank/read1.html
+++ b/frontend/BloodBank/read1.html
@@ -50,7 +50,7 @@
         </li>
         <div class="d-flex ml-auto">
           <li class="nav-item ">
-            <a class="nav-link" aria-current="page" href="../../admin.html">Admin Login</a>
+            <a class="nav-link" aria-current="page" href="../../admin.php">Admin Login</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="../help.php">Help Desk</a>
@@ -102,13 +102,13 @@
             <a class="nav-link " aria-current="page" href="../ngo-charity.php">NGO and Charity</a>
           </li>
           <li class="nav-item d-sm-flex d-lg-none">
-            <a class="nav-link" aria-current="page" href="../index.php">Help Desk</a>
+            <a class="nav-link" aria-current="page" href="../help.php">Help Desk</a>
           </li>
           <li class="nav-item d-sm-flex d-lg-none">
             <a class="nav-link" aria-current="page" href="../sign.php">Sign in/Sign up</a>
           </li>
           <li class="nav-item d-sm-flex d-lg-none">
-            <a class="nav-link" aria-current="page" href="../../admin.html">Admin Login</a>
+            <a class="nav-link" aria-current="page" href="../../admin.php">Admin Login</a>
           </li>
         </ul>
       </div>
