--- a/menu.html
+++ b/menu.html
@@ -79,7 +79,7 @@
 						class="card-img-top" alt="blood receiver">
 					<div class="card-body">
 						<h5 class="card-title">Doctor Category</h5>
-						<p class="card-text"><a href="insert_doctor_category.php">Insert Data</a><br>
+						<p class="card-text"><a href="insert_doctor_category.html">Insert Data</a><br>
 							<a href="display_doctor_catergory.php">Display , Update & Delete the Records</a>
 						</p>
 					</div>
