--- a/menu.html
+++ b/menu.html
@@ -90,7 +90,7 @@
 					<img src="https://c8.alamy.com/comp/2E3RJBP/doctor-in-mask-with-stethoscope-coronavirus-covid-19-control-concept-vector-illustration-in-flat-style-2E3RJBP.jpg"" class="
 						card-img-top" alt="blood donor">
 					<div class="card-body">
-						<h5 class="card-title">Doctor Consultation</h5>
+						<h5 class="card-title">Doctor's Database</h5>
 						<p class="card-text"><a href="Insert_doctors_data.php">Insert Data</a><br>
 							<a href="display_doctor_data.php">Display , Update and Delete the Records</a>
 						</p>
