--- a/insert_service_data.html
+++ b/insert_service_data.html
@@ -66,7 +66,7 @@
 			<h2 class="col-10">Insert Records of services</h2>
 		</div>
 		<div class="row mt-5 center-center p-4">
-			<form class="col-12 row p-2" action="insert_admissioncell_data.php" method="POST" name="insert_frm"
+			<form class="col-12 row p-2" action="my_insert_service.php" method="POST" name="insert_frm"
 				enctype="multipart/form-data"
 				style=" background-color:rgb(254, 247, 255); max-width: 500px; border: 1px solid black; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border-radius: 12px;">
 				<div class="col-12 mt-1 ">
