api style changes

--- a/menu.html
+++ b/menu.html
@@ -127,7 +127,7 @@
 			</div>
 			<div class="col-12 col-md-3">
 				<div class="card w-100">
-					<img src="https://lh3.googleusercontent.com/proxy/HeD0d2QNvcx0rlLb2V2QfBR-5VOPFzIMnTeDs6ufn59__hmIH85EOVwIBUFo4UezkU66mEPBUSgYZWFFLVPGMU5sVP0mkz36r2IhDrGw6zLU7BKIYQqri4z0ochTHvIPAw"
+					<img src="https://cdn5.vectorstock.com/i/1000x1000/99/79/hospital-direct-admission-vector-23919979.jpg"
 						class="card-img-top" alt="blood receiver">
 					<div class="card-body">
 						<h5 class="card-title">Admission Cell Database</h5>
