Hoapital data added in database.

--- a/insert_safehome.html
+++ b/insert_safehome.html
@@ -79,12 +79,12 @@
 					<input type="text" class="form-control" name="name" placeholder="Name" required>
 				</div>
 				<div class="col-12 mt-1 ">
-					<label for="Name" class="form-label">Hospital Bed Capacity : </label>
+					<label for="Name" class="form-label">Safehome Bed Capacity : </label>
 					<input type="text" class="form-control" name="bed_capacity" placeholder="Total bed capacity"
 						required>
 				</div>
 				<div class="col-12 mt-1 ">
-					<label for="Name" class="form-label">Hospital Bed Availability : </label>
+					<label for="Name" class="form-label">Safehome Bed Availability : </label>
 					<input type="text" class="form-control" name="bed_availability" placeholder="Total bed Available"
 						required>
 				</div>
@@ -94,7 +94,7 @@
 				</div>
 				<div class="col-12 mt-1 ">
 					<label for="Name" class="form-label">Email-id : </label>
-					<input type="email" class="form-control" name="email" placeholder="Email" required>
+					<input type="email" class="form-control" name="email" placeholder="Email">
 				</div>
 				<div class="col-12 mt-1 ">
 					<label for="Name" class="form-label">Address : </label>
