--- a/insert_hospital_data.html
+++ b/insert_hospital_data.html
@@ -106,7 +106,7 @@
 				</div>
 				<div class="col-12 mt-1 ">
 					<label for="Name" class="form-label">Email-id : </label>
-					<input type="email" class="form-control" name="email" placeholder="Email" required>
+					<input type="email" class="form-control" name="email" placeholder="Email">
 				</div>
 				<div class="col-12 mt-1 ">
 					<label for="Name" class="form-label">Address : </label>
@@ -119,7 +119,7 @@
 				<div class="col-12 mt-1 ">
 					<label for="Name" class="form-label">Hospital additional information : </label>
 					<input type="text" class="form-control" name="hospital_additional_info"
-						placeholder="Add more information" required>
+						placeholder="Add more information">
 				</div>
 				<div class="col-12 mt-3">
 					<input type="submit" class="btn btn-primary" name="submit" value="Submit">
