--- a/insert_hospital_data.html
+++ b/insert_hospital_data.html
@@ -6,7 +6,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Covid-19</title>
+	<title>Covid Care</title>
+	<link rel="icon" href="./images/logo.jpg" type="image/png">
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
 		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
 		crossorigin="anonymous"></script>
@@ -82,11 +83,13 @@
 					Hospital type : &nbsp;
 
 					<input type="radio" name="type" class="type" value="Government Hospital"
-					style="margin-left: 1vmin;">&nbsp;Government Hospital<br>
-				<input type="radio" name="type" class="type" value="Govt. Requisitioned Pvt. Hospital" style="margin-left: 18.5vmin;">&nbsp;Govt.
-				Requisitioned Pvt. Hospital<br>
-				<input type="radio" name="type" class="type" value="Private Hospital"  style="margin-left: 18.5vmin;">&nbsp;Private Hospital
-				
+						style="margin-left: 1vmin;">&nbsp;Government Hospital<br>
+					<input type="radio" name="type" class="type" value="Govt. Requisitioned Pvt. Hospital"
+						style="margin-left: 18.5vmin;">&nbsp;Govt.
+					Requisitioned Pvt. Hospital<br>
+					<input type="radio" name="type" class="type" value="Private Hospital"
+						style="margin-left: 18.5vmin;">&nbsp;Private Hospital
+
 
 
 				</div>
