--- a/menu.html
+++ b/menu.html
@@ -5,8 +5,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Covid-19</title>
-	<link rel="icon" href="./images/project_logo.png" type="image/png">
+	<title>Covid Care</title>
+	<link rel="icon" href="./images/logo.jpg" type="image/png">
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
 		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -49,32 +49,38 @@
 			text-shadow: 2px 2px 3px red;
 			margin-top: 3%;
 		}
-		.btn{
+
+		.btn {
 			margin-left: 80vmin;
 			margin-top: -30vmin;
 		}
-		.menu{
+
+		.menu {
 			margin-top: -20vmin;
 		}
-		@media only screen and (max-width: 768px){
-			.btn{
+
+		@media only screen and (max-width: 768px) {
+			.btn {
 				margin-left: 50vmin;
 			}
 		}
-		@media only screen and (max-width: 425px){
-			.btn{
+
+		@media only screen and (max-width: 425px) {
+			.btn {
 				margin-top: -50vmin;
 				margin-left: 30vmin;
 			}
 		}
-		@media only screen and (max-width: 375px){
-			.btn{
+
+		@media only screen and (max-width: 375px) {
+			.btn {
 				margin-top: -60vmin;
 				margin-left: 25vmin;
 			}
 		}
-		@media only screen and (max-width: 320px){
-			.btn{
+
+		@media only screen and (max-width: 320px) {
+			.btn {
 				margin-top: -70vmin;
 				margin-left: 20vmin;
 			}
@@ -91,7 +97,7 @@
 			<div class="col-12 text-center menu">
 				<h1>MENU</h1>
 			</div>
-			
+
 		</div>
 		<div class="row d-flex justify-content-around mt-5">
 			<div class="col-12 col-md-3">
@@ -118,7 +124,7 @@
 			</div>
 			<div class="col-12 col-md-3">
 				<div class="card w-100">
-					<img src="https://c8.alamy.com/comp/2E3RJBP/doctor-in-mask-with-stethoscope-coronavirus-covid-19-control-concept-vector-illustration-in-flat-style-2E3RJBP.jpg"" class="
+					<img src="https://c8.alamy.com/comp/2E3RJBP/doctor-in-mask-with-stethoscope-coronavirus-Covid Care-control-concept-vector-illustration-in-flat-style-2E3RJBP.jpg"" class="
 						card-img-top" alt="blood donor">
 					<div class="card-body">
 						<h5 class="card-title">Doctor's Database</h5>
@@ -145,7 +151,7 @@
 		<div class="row d-flex justify-content-around mt-5">
 			<div class="col-12 col-md-3">
 				<div class="card w-100">
-					<img src="https://c8.alamy.com/comp/2BAJ7EH/covid-19-coronavirus-pandemic-female-doctor-in-consultation-patient-in-home-vector-illustration-2BAJ7EH.jpg"
+					<img src="https://c8.alamy.com/comp/2BAJ7EH/Covid Care-coronavirus-pandemic-female-doctor-in-consultation-patient-in-home-vector-illustration-2BAJ7EH.jpg"
 						class="card-img-top" alt="blood donor">
 					<div class="card-body">
 						<h5 class="card-title">Safe Home Database</h5>
@@ -348,7 +354,7 @@
 			</div>
 			<div class="col-12 col-md-3">
 				<div class="card w-100">
-					<img src="https://img.freepik.com/free-vector/website-faq-section-user-help-desk-customer-support-frequently-asked-questions-problem-solution-quiz-game-confused-man-cartoon-character_335657-1602.jpg?size=338&ext=jpg"
+					<img src="https://media.istockphoto.com/vectors/bulletin-board-vector-id925737742?k=6&m=925737742&s=612x612&w=0&h=6SbncHcZoYC64CkIInnoxXKt3H_gyZe7_nCn82ALd1U="
 						class="card-img-top" alt="blood donor">
 					<div class="card-body">
 						<h5 class="card-title">Notice Board Management</h5>
@@ -390,7 +396,7 @@
 	</div>
 	<div class="responsive">
 		<div class="gallery">
-			<img src="https://c8.alamy.com/comp/2E3RJBP/doctor-in-mask-with-stethoscope-coronavirus-covid-19-control-concept-vector-illustration-in-flat-style-2E3RJBP.jpg"
+			<img src="https://c8.alamy.com/comp/2E3RJBP/doctor-in-mask-with-stethoscope-coronavirus-Covid Care-control-concept-vector-illustration-in-flat-style-2E3RJBP.jpg"
 				alt="doc_consult" width="200" height="120"><br>
 
 			<div class="desc"><b><u>DOCTOR CONSULTATION</u></b><br>
