--- a/frontend/BloodBank/read1.html
+++ b/frontend/BloodBank/read1.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Covid-19</title>
-
+  <title>Covid Care</title>
+  <link rel="icon" href="../images/logo.jpg" type="image/png">
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -43,7 +43,7 @@
   <header>
     <!-- Top Navbar -->
     <nav class="navbar navbar-light navbar-expand-lg pb-0" style="background-color: #17a2b8;">
-      <a class="navbar-brand" href="index.html"><img class="logo w-100" src="../images/project_logo.png" /></a>
+      <a class="navbar-brand" href="index.html"><img class="logo w-100" src="../images/logo.jpg" /></a>
       <ul class="nav navbar-nav d-none d-lg-flex w-100">
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="../sign.php">Sign in/Sign up</a>
