--- a/frontend/district_data.html
+++ b/frontend/district_data.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Covid-19</title>
-    <link rel="icon" href="./images/project_logo.png" type="image/png">
+    <title>Covid Care</title>
+    <link rel="icon" href="./images/logo.jpg" type="image/png">
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
