--- a/frontend/vaccination.html
+++ b/frontend/vaccination.html
@@ -568,16 +568,17 @@
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
           <h6 class="text-uppercase mb-4 font-weight-bold">About More information</h6>
           <p>
-            <a href="#!">Covishield®</a>
+            <a href="https://www.seruminstitute.com/health_faq_covishield.php" target="_blank">Covishield®</a>
           </p>
           <p>
-            <a href="#!">Covaxin®</a>
+            <a href="https://www.bharatbiotech.com/covaxin.html" target="_blank">Covaxin®</a>
           </p>
           <p>
-            <a href="#!">Mucormycosis disease</a>
+            <a href="https://www.cdc.gov/fungal/diseases/mucormycosis/index.html" target="_blank">Mucormycosis
+              disease</a>
           </p>
           <p>
-            <a href="#!">W.H.O</a>
+            <a href="https://www.who.int/" target="_blank">W.H.O</a>
           </p>
         </div>
         <!-- Grid column -->
@@ -588,16 +589,16 @@
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
           <h6 class="text-uppercase mb-4 font-weight-bold">Useful links</h6>
           <p>
-            <a href="#!">Your Account</a>
+            <a href="sign.php">Your Account</a>
           </p>
           <p>
-            <a href="#!">Cowin</a>
+            <a href="https://www.cowin.gov.in/" target="_blank">Cowin</a>
           </p>
           <p>
-            <a href="#!">Arogya Setu</a>
+            <a href="https://www.aarogyasetu.gov.in/" target="_blank">Arogya Setu</a>
           </p>
           <p>
-            <a href="#!">Help</a>
+            <a href="help.php">Help</a>
           </p>
         </div>
 
