--- a/frontend/BloodBank/read2.html
+++ b/frontend/BloodBank/read2.html
@@ -321,93 +321,107 @@
     </div>
   </div>
   <!-- Footer -->
-  <footer class="page-footer font-small mdb-color pt-4" style="background-color: #e3f2fd">
+  <footer class="page-footer font-small mdb-color pt-4" style="background-color: #e3f2fd; z-index: 999;">
+
     <!-- Footer Links -->
     <div class="container text-center text-md-left">
+
       <!-- Footer links -->
       <div class="row text-center text-md-left mt-3 pb-3">
+
         <!-- Grid column -->
         <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-          <h6 class="text-uppercase mb-4 font-weight-bold">Company name</h6>
-          <p>
-            Here you can use rows and columns to organize your footer content.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          </p>
+          <h6 class="text-uppercase mb-4 font-weight-bold">Covid Care</h6>
+          <p>Our team tried to do as much as they can to help you out in this pandemic situation. If this page is
+            benifical for you at some point then we will be very thankfull. Give us a review if you like it.</p>
         </div>
         <!-- Grid column -->
 
-        <hr class="w-100 clearfix d-md-none" />
+        <hr class="w-100 clearfix d-md-none">
 
         <!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-          <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
+          <h6 class="text-uppercase mb-4 font-weight-bold">About More information</h6>
           <p>
-            <a href="#!">MDBootstrap</a>
+            <a href="https://www.seruminstitute.com/health_faq_covishield.php" target="_blank">Covishield®</a>
           </p>
           <p>
-            <a href="#!">MDWordPress</a>
+            <a href="https://www.bharatbiotech.com/covaxin.html" target="_blank">Covaxin®</a>
           </p>
           <p>
-            <a href="#!">BrandFlow</a>
+            <a href="https://www.cdc.gov/fungal/diseases/mucormycosis/index.html" target="_blank">Mucormycosis
+              disease</a>
           </p>
           <p>
-            <a href="#!">Bootstrap Angular</a>
+            <a href="https://www.who.int/" target="_blank">W.H.O</a>
           </p>
         </div>
         <!-- Grid column -->
 
-        <hr class="w-100 clearfix d-md-none" />
+        <hr class="w-100 clearfix d-md-none">
 
         <!-- Grid column -->
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
           <h6 class="text-uppercase mb-4 font-weight-bold">Useful links</h6>
           <p>
-            <a href="#!">Your Account</a>
+            <a href="sign.php">Your Account</a>
           </p>
           <p>
-            <a href="#!">Become an Affiliate</a>
+            <a href="https://www.cowin.gov.in/" target="_blank">Cowin</a>
           </p>
           <p>
-            <a href="#!">Shipping Rates</a>
+            <a href="https://www.aarogyasetu.gov.in/" target="_blank">Arogya Setu</a>
           </p>
           <p>
-            <a href="#!">Help</a>
+            <a href="help.php">Help</a>
           </p>
         </div>
 
         <!-- Grid column -->
-        <hr class="w-100 clearfix d-md-none" />
+        <hr class="w-100 clearfix d-md-none">
 
         <!-- Grid column -->
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
           <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
-          <p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-          <p><i class="fas fa-envelope mr-3"></i> info@gmail.com</p>
-          <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-          <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+          <p>
+            <i class="fas fa-home mr-3"></i> Kolkata, Vivekanada College, Thakurpukur
+          </p>
+          <p>
+            <i class="fas fa-envelope mr-3"></i> info@gmail.com
+          </p>
+          <p>
+            <i class="fas fa-phone mr-3"></i> + 01 234 567 88
+          </p>
+          <p>
+            <i class="fas fa-print mr-3"></i> + 01 234 567 89
+          </p>
         </div>
         <!-- Grid column -->
+
       </div>
       <!-- Footer links -->
 
-      <hr />
+      <hr>
 
       <!-- Grid row -->
       <div class="row d-flex align-items-center">
+
         <!-- Grid column -->
         <div class="col-md-7 col-lg-8">
+
           <!--Copyright-->
-          <p class="text-center text-md-left">
-            © 2020 Copyright:
-            <a href="https://mdbootstrap.com/">
-              <strong> MDBootstrap.com</strong>
+          <p class="text-center text-md-left">© 2021 Copyright:
+            <a href="#">
+              <strong> Covid Care.com</strong>
             </a>
           </p>
+
         </div>
         <!-- Grid column -->
 
         <!-- Grid column -->
         <div class="col-md-5 col-lg-4 ml-lg-0">
+
           <!-- Social buttons -->
           <div class="text-center text-md-right">
             <ul class="list-unstyled list-inline">
@@ -433,15 +447,18 @@
               </li>
             </ul>
           </div>
+
         </div>
         <!-- Grid column -->
+
       </div>
       <!-- Grid row -->
+
     </div>
     <!-- Footer Links -->
+
   </footer>
   <!-- Footer -->
-
   <script>
     $('.list-group-item').click(function () {
       // Select all list items
